Intial commit for server